feat: add faq script

--- a/faq.html
+++ b/faq.html
@@ -12,16 +12,16 @@
   </head>
 
   <body>
-    <section class="faq-base">
+    <section id="faq-base" class="faq-base">
       <h1>Foire aux questions</h1>
 
       <div >
         <div class="faq-seach">
-          <input type="text" id="faq-seach-input" placeholder="Rechercher une question..."/>
+          <input type="text" id="faq-search-input" placeholder="Rechercher une question..."/>
         </div>
     
         <div id="faq-container">
-
+          <!-- Block that will contain the questions -->
         </div>
       </div>
     </section>
