--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
     <link rel="stylesheet" type="text/css" href="faq.css">
-    <script src="faq.js" async></script>
     <title>Foire aux questions</title>
   </head>
 
@@ -25,6 +24,10 @@
         </div>
       </div>
     </section>
+
+
+    <script src="faq.js" ></script>
+
     
     
   </body>
