feat: update file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <link rel="stylesheet" type="text/css" href="faq.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Foire aux questions</title>
   </head>
 
@@ -26,7 +26,7 @@
     </section>
 
 
-    <script src="faq.js" ></script>
+    <script src="index.js" ></script>
 
     
     
